--- a/html/shopcar.html
+++ b/html/shopcar.html
@@ -118,7 +118,7 @@
         <div class="goodInfo" v-if="shopcar.length != 0">
             <h2>全部商品</h2>
             <ul>
-                <li v-for="(item,index) in reverseShopcar" :key="item">
+                <li v-for="(item,index) in shopcar" :key="item">
                     <van-checkbox-group v-model="checkResult" @change="singleGoodChecked">
                         <van-checkbox :name="item"></van-checkbox>
                     </van-checkbox-group>
@@ -207,9 +207,6 @@
                     }
                     return total * 100;
                 }
-            },
-            reverseShopcar: function () {
-                return this.shopcar.reverse();
             }
         },
         methods: {
@@ -289,19 +286,27 @@
             },
             // 删除购物车内容
             deleteShopcar: function () {
-                const logonUserId = sessionStorage.getItem("id");
-                axios.post("http://localhost:5502/shopcarDelete", Qs.stringify({
-                    id: logonUserId,
-                    shopcar: this.checkResult
-                }))
-                    .then(function (response) {
-                        vant.Toast('删除成功！请刷新查看');
-                        console.log(response.data);
-                    })
-                    .catch(function (error) {
-                        vant.Toast.fail('删除失败');
-                        console.log(error);
-                    });
+                if (this.checkResult.length === 0) {
+                    vant.Toast('请选择商品！');
+                }
+                else {
+                    const logonUserId = sessionStorage.getItem("id");
+                    console.log(this.checkResult);
+                    console.log(this.shopcar);
+                    console.log(this.reverseShopcar);
+                    axios.post("http://localhost:5502/shopcarDelete", Qs.stringify({
+                        id: logonUserId,
+                        shopcar: this.checkResult
+                    }))
+                        .then(function (response) {
+                            vant.Toast('删除成功！请刷新查看');
+                            console.log(response.data);
+                        })
+                        .catch(function (error) {
+                            vant.Toast.fail('删除失败');
+                            console.log(error);
+                        });
+                }
             },
             // 确认购买
             buy: function () {
@@ -372,7 +377,7 @@
                 for (let i = res.data.length - 1; i >= 0; i--) {
                     let id = userInfo[i].user.id;
                     if (logonUserId === id) {
-                        this.shopcar = userInfo[i].shopcar;
+                        this.shopcar = userInfo[i].shopcar.reverse();
                         break;
                     }
                 }
