--- a/html/groud.html
+++ b/html/groud.html
@@ -195,6 +195,7 @@
                 window.location.href = "./me.html";
             },
             goToDetails: function(index){
+                console.log(this.groudList);
                 window.location.href = "./details.html";
                 sessionStorage.setItem("index", index);
             }
