--- a/html/publish.html
+++ b/html/publish.html
@@ -217,7 +217,8 @@
                         publisher: {
                             name: this.pulisherInfo.user.name,
                             headurl: this.pulisherInfo.user.headurl,
-                            credit: this.pulisherInfo.credit
+                            credit: this.pulisherInfo.credit,
+                            phone: this.pulisherInfo.user.phone
                         },
                         good: this.good,
                         info: this.message,
