--- a/html/login.html
+++ b/html/login.html
@@ -127,6 +127,7 @@
                 }
                 else {
                     axios.get("http://localhost:5502/getUserInfo").then(res => {
+                        console.log(res.data);
                         let userInfo = res.data;
                         for (let i = res.data.length - 1; i >= 0; i--) {
                             let id = userInfo[i].user.id;
